@@ -1,8 +1,7 @@
-package org.sireum.aadl.osate.tests.extras;
+package org.sireum.aadl.osate.cli;
 
 import java.io.File;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 import org.eclipse.emf.common.util.EList;
@@ -64,7 +63,7 @@ public class UpdaterUtil {
 						}
 					}
 				}
-				ret.add(new TestAadlSystem(systemImpl, systemFile, Arrays.asList(project)));
+				ret.add(new TestAadlSystem(systemImpl, systemFile, List.of(project)));
 			}
 		}
 		return ret;
